<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency SMS</string>
    <string name="action_settings">Preferences</string>
    <string name="sms_text_hint">Enter your preferred emergency text…</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="button_save">Save</string>
    <string name="contact_button_description">Contacts Button</string>
    <string name="select_contact_phone_number_and_type">Select Contacts</string>
    <string name="hint_about_phone_numbers">You can add more than one number, by entering # between numbers</string>
    <string name="service_not_running">Emergency SMS Disabled</string>
    <string name="service_running">Emergency SMS Enabled</string>
    <string name="optimization_prefs">Personalization</string>
    <string name="counter_title">Number of clicks</string>
    <string name="screen_off_counter">Number of clicks set to:</string>
    <string name="titlePrefs">Preferences</string>
    <string name="vibratePref">Vibration</string>
    <string name="vibrate_on">Vibration is enabled when sending SMS</string>
    <string name="vibrate_off">Vibration is disabled when sending SMS</string>
    <string name="locationPref">Localization</string>
    <string name="location_off">Your coordinates won\'t be sent</string>
    <string name="location_on">Your coordinates will be sent</string>
    <string name="last_known_position">Last-Known</string>
    <string name="last_known_location_on">Send current or last known location</string>
    <string name="last_known_location_off">Try to send current location (may fail)</string>
    <string name="notification_text">Emergency SMS started</string>
    <string name="notification_title">Emergency SMS Active</string>
    <string name="notification_context_text">Click to open</string>
    <string name="permanent_notification">StatusBar</string>
    <string name="permanent_notification_summary_on">Permanent notification in StatusBar enabled</string>
    <string name="permanent_notification_summary_off">Permanent notification in StatusBar disabled</string>
    <string name="localization_prefs">Localization</string>
    <string name="times">times</string>
    <string name="screen_off_counter_sum">The number of clicks to trigger the service.</string>
    <string name="createdby">Created by SpyDiKo</string>
    <string name="playStore">Play Store</string>
    <string name="cancel">Cancel</string>
    <string name="spydiko">Spydiko</string>
    <string name="other_apps">View all of our apps!</string>
    <string name="copyright">2013 \u00a9 S.D.K.</string>
    <string name="showcase_title">Contacts</string>
    <string name="showcase_message">Select all your emergency contacts</string>
    <string name="showcase_title_2">Message</string>
    <string name="showcase_message_2">Write the message you want to send</string>
    <string name="showcase_title_3">Enable</string>
    <string name="showcase_message_3">Enable the app</string>
    <string name="showcase_title_4">Preferences</string>
    <string name="showcase_message_4">Edit all preferences such as localization, number of clicks, etc</string>
    <string name="showcase_title_5">All Done!</string>
    <string name="showcase_message_5">Now click the power button as many times as you have entered in preferences</string>
    <string name="misc_prefs">Miscellaneous</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_on">Tutorial will be shown on restart</string>
    <string name="tutorial_off">Tutorial won\'t be shown</string>
    <string name="titleLicense">Licence</string>


</resources>
