<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="30dp"
              android:orientation="vertical"
              tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/list_header"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_contact_phone_number_and_type"/>
    <ImageView
        android:id="@+id/add_contact"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_plus"/>

    </RelativeLayout>
    <ListView
        android:id="@+id/list_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="5dp"
        android:scrollbars="vertical"
        android:listSelector="@android:color/transparent"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textToBeSent"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:hint="@string/sms_text_hint"/>

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/button_save"-->
        <!--android:id="@+id/buttonSave"-->
        <!--android:layout_gravity="center_horizontal"/>-->

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/service_not_running"
            android:textColor="@color/Red"
            android:layout_centerVertical="true"
            android:id="@+id/serviceState"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxService"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/serviceState"
            android:layout_gravity="right"/>
    </RelativeLayout>

</LinearLayout>